--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>this is new Repo</p>
-    <p>this is new Feature</p>
+    <p>this is new Feature (button)</p>
   </body>
 </html>
